--- a/index.html
+++ b/index.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full w-full">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.341a0e92.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.019f7634.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.e3c1f78c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.0a8b18bc.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.b8d6f0ed.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/layout.svelte.d0f1c823.js">
+		<link href="./_app/immutable/assets/_layout.0536089c.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.4549fd77.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.f76a8193.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.3ce960d7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.d96a6931.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.10b2be7e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.41c905a7.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.74b98c50.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.5da536f1.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.ts.984db11e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.15ae8c02.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.55f3333b.js">
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="h-full w-full">
 		<div style="display: contents">
 
 
-<h1>Welcome to SvelteKit</h1>
-<p>Visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to read the documentation</p>
+
+
+<div class="flex flex-col justify-stretch items-stretch h-full"><div class="flex flex-col grow-0 min-h-[256px] bg-green-500 p-4 gap-2"><label for="projectDescription" class="text-xl">Project Description</label>
+  <textarea id="projectDescription" class="flex-1 rounded-lg"></textarea></div>
+  <div class="flex flex-row grow"><div class="flex flex-col flex-1 bg-red-500 p-4 gap-2"><p>Loading...</p></div>
+	<div class="flex-col flex-1 p-4 gap-2"><pre class="mermaid"></pre></div></div></div>
 
 
 			
 			<script>
 				{
-					__sveltekit_cscde9 = {
+					__sveltekit_1ss1h84 = {
 						assets: "/mermaid-gpt",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -37,8 +44,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.341a0e92.js"),
-						import("./_app/immutable/entry/app.b8d6f0ed.js")
+						import("./_app/immutable/entry/start.4549fd77.js"),
+						import("./_app/immutable/entry/app.10b2be7e.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
